@@ -25,7 +25,7 @@ no_index:
 requires:
   Mo: 0
   Mo::utils: 0.15
-  Mo::utils::Language: 0
+  Mo::utils::Language: 0.04
   Readonly: 0
   perl: 5.8.0
 resources:
