@@ -20,7 +20,7 @@ readme_from 'Simple.pm';
 recursive_author_tests('xt');
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.15;
-requires 'Mo::utils::Language' => 0;
+requires 'Mo::utils::Language' => 0.04;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-Message-Simple/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-Message-Simple';
