@@ -1,6 +1,7 @@
 TODO
 ====
-3.
+3. Rewrite to use of Data::Text::Simple?
+4.
 
 Applied
 =======
