@@ -1,5 +1,6 @@
 0.03
  - Improve ERRORS section in doc.
+ - Rewrite to new Mo::utils::Language and its new error message.
 
 0.02 2023-06-21T12:32:30+02:00
  - Add ERRORS section to doc.
